--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "browserify": "^14.3.0",
     "bundle-collapser": "^1.2.1",
     "envify": "^4.0.0",
+    "flow-bin": "^0.76.0",
+    "flow-coverage-report": "^0.5.0",
     "jest": "^19.0.2",
     "react": "^15.5.1",
     "uglifyify": "^3.0.4",
